--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Kurs git</title>
 </head>
 <body>
-  Witaj na kursie
+  <h1>Witaj na kursie</h1>
+  <p>Znajdziesz tu wiele informacji</p>
 </body>
 </html>
